# FFmpegAudio

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/baidu/crazyorange/ffmpegaudio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoChannel.cpp  VideoChannel.h  audio_channel.cpp  audio_channel.h  control_ffmpeg.cpp  control_ffmpeg.h  java_call_helper.cpp  java_call_helper.h  player.cpp
app/src/main/java/com/baidu/crazyorange/ffmpegaudio/: MainActivity.java  Mp3Player.java
app/src/test/java/com/baidu/crazyorange/ffmpegaudio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
